--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<!-- comentário para gerar alteração de arquivos novamente -->
+<!-- comentário para gerar alteração de arquivos oara validar git -->
 <body>
 
     <header class="cabecalho">
